# Tacticus

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  tacticus-refactor.prose
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/chess-ai/: Cargo.toml
crates/chess-ai/src/: learning_agent.rs  lib.rs  playstyle.rs  profile.rs
crates/chess-cli/: Cargo.toml
crates/chess-cli/src/: game_loop.rs  main.rs  ui.rs
crates/chess-cli/src/commands/: analyze.rs  init.rs  mod.rs  play.rs  profile.rs  train.rs
crates/chess-core/: Cargo.toml
crates/chess-core/src/: error.rs  game.rs  lib.rs  move_history.rs  position.rs
crates/chess-engine/: Cargo.toml
crates/chess-engine/src/: analyzer.rs  evaluator.rs  lib.rs
crates/chess-gui/: Cargo.toml
crates/chess-gui/src/: main.rs
crates/chess-llm-agent/: Cargo.toml
crates/chess-llm-agent/src/: chess_coach.rs  conversation.rs  lib.rs  openrouter.rs  prompts.rs  tools.rs
crates/chess-storage/: Cargo.toml
crates/chess-storage/src/: database.rs  lib.rs  models.rs  repositories.rs
crates/chess-trainer/: Cargo.toml
crates/chess-trainer/src/: exercise.rs  lib.rs  strategy.rs  training_session.rs
tacticus-ui/: .gitignore  package-lock.json  package.json  playwright.config.ts
tacticus-ui/src/: App.css  App.tsx
tacticus-ui/src-tauri/: Cargo.toml  tauri.conf.json
tacticus-ui/src-tauri/src/: lib.rs  main.rs
tacticus-ui/src-tauri/src/commands/: coach.rs  data.rs  game.rs  learning.rs  mod.rs  training.rs  user.rs
tacticus-ui/src-tauri/src/database/: connection.rs  mod.rs  repositories.rs  schema.rs
tacticus-ui/src-tauri/tests/: game_tests.rs  training_tests.rs  user_tests.rs
tacticus-ui/src/components/: AnalyzeMode.css  AnalyzeMode.tsx  Hub.css  Hub.tsx  LearnMode.css  LearnMode.tsx  Onboarding.css  Onboarding.tsx  PlayMode.css  PlayMode.tsx  Settings.css  Settings.tsx  TrainMode.css  TrainMode.tsx
tacticus-ui/src/components/board/: ChessBoard.css  ChessBoard.tsx  index.ts
tacticus-ui/src/components/gurgeh/: GurgrehChat.css  GurgrehChat.tsx  index.ts
tacticus-ui/src/components/learning/: ChessTerm.css  ChessTerm.tsx  index.ts
tacticus-ui/src/components/xp/: XPButton.tsx  XPCard.tsx  XPInput.tsx  XPPanel.tsx  XPProgress.tsx  XPTaskbar.tsx  XPWindow.tsx  index.ts
tacticus-ui/src/lib/ai/: agent.ts  index.ts  prompts.ts  types.ts
tacticus-ui/src/stores/: gameStore.ts  trainingStore.ts  userStore.ts
tacticus-ui/src/styles/: xp-theme.css
tacticus-ui/tests/e2e/: hub.spec.ts  onboarding.spec.ts  play.spec.ts  training.spec.ts
