[workspace]
members = [
    "crates/chess-core",
    "crates/chess-engine",
    "crates/chess-trainer",
    "crates/chess-ai",
    "tacticus-ui/src-tauri",
]
exclude = [
    "crates/chess-storage",
    "crates/chess-llm-agent",
]
default-members = ["tacticus-ui/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chess Trainer Team"]
license = "MIT"

[workspace.dependencies]
# Chess libraries
chess = "3.2"
shakmaty = "0.27"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# ML/AI
ndarray = "0.15"
rand = "0.8"

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Environment variables
dotenv = "0.15"
