[package]
name = "chess-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chess-core = { path = "../chess-core" }
chess-engine = { path = "../chess-engine" }
chess-trainer = { path = "../chess-trainer" }
chess = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
