[package]
name = "chess-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chess-core = { path = "../chess-core" }
chess-engine = { path = "../chess-engine" }
chess-trainer = { path = "../chess-trainer" }
chess-ai = { path = "../chess-ai" }
chess-storage = { path = "../chess-storage" }
chess = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
