[package]
name = "chess-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tacticus"
path = "src/main.rs"

[dependencies]
chess-core = { path = "../chess-core" }
chess-engine = { path = "../chess-engine" }
chess-trainer = { path = "../chess-trainer" }
chess-ai = { path = "../chess-ai" }
chess-storage = { path = "../chess-storage" }
chess-llm-agent = { path = "../chess-llm-agent" }
chess = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
