[package]
name = "chess-llm-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chess-core = { path = "../chess-core" }
chess-engine = { path = "../chess-engine" }
chess-ai = { path = "../chess-ai" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
