[package]
name = "chess-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chess-core = { path = "../chess-core" }
chess-ai = { path = "../chess-ai" }
chess-trainer = { path = "../chess-trainer" }
chess = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
