[package]
name = "tacticus-ui"
version = "0.1.0"
description = "Tacticus - AI Chess Training with Gurgeh"
authors = ["Chess Trainer Team"]
edition = "2021"

[lib]
name = "tacticus_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Chess crates from workspace (excluding chess-storage to avoid sqlite conflict)
chess = "3.2"
chess-core = { path = "../../crates/chess-core" }
chess-engine = { path = "../../crates/chess-engine" }
chess-trainer = { path = "../../crates/chess-trainer" }

# SQLite (bundled to avoid system dependency issues)
rusqlite = { version = "0.31", features = ["bundled"] }

# Async
tokio = { version = "1.35", features = ["full"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
dotenv = "0.15"
rand = "0.8"
lazy_static = "1.4"
reqwest = { workspace = true, features = ["json"] }
